# baremetal-win11

./: .gitignore  AGENTS.md  CATEGORIZATION_STRATEGIES.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  DAEMON_MODE.md  DAEMON_STATUS.md  EXAMPLE_OUTPUT.md  FINAL_STATUS.md  QUICK_START.md  README.md  rustfmt.toml
.github/: CICD_QUICKSTART.md  scoop-manifest-example.json
.github/workflows/: README.md  build.yml  daily-release.yml  release.yml  security-audit.yml
src/: categorization.rs  cli.rs  freeze_engine.rs  lib.rs  main.rs  persistence.rs  process.rs
src/daemon/: mod.rs  service.rs  state.rs  tray.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs
src/windows/: controller.rs  enumerator.rs  mod.rs  registry.rs
