[package]
name = "smart-freeze"
version = "0.3.0"
edition = "2021"
authors = ["Napolitain"]
description = "Smart freeze engine for Windows 11 - intelligently identify and freeze heavy but safe-to-freeze applications"
readme = "README.md"
repository = "https://github.com/Napolitain/baremetal-win11"
license-file = "LICENSE"
keywords = ["windows", "process", "memory", "freeze", "optimization"]
categories = ["os::windows-apis", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
tray-icon = "0.21"
winit = "0.29"
